# libwiisprite

./: .gitignore  CMakeLists.txt  LICENSE.TXT  devkitPPC.RVL.cmake
examples/: CMakeLists.txt
examples/spaceinvaders/: CMakeLists.txt
examples/spaceinvaders/src/: main.cpp
libwiisprite/: CMakeLists.txt
libwiisprite/source/: gamewindow.cpp  gamewindow.h  image.cpp  image.h  layer.cpp  layer.h  layermanager.cpp  layermanager.h  quad.cpp  quad.h  sprite.cpp  sprite.h  tiledlayer.cpp  tiledlayer.h  wiisprite.h
